﻿2006-05-05  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/setup_video.cpp: Fixed some numeric conversions.

2006-05-03  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* configure.ac, src/game.cpp, src/graphics.cpp, src/main.cpp,
	src/openglgraphics.cpp, The Mana World: Increased fps limit granularity
	and cleaned some code, fixed some xml library name in Dev-C++ project
	file, switched version to 0.0.20.
	* src/game.cpp, src/gui/setup.cpp, src/gui/setup_video.cpp,
	src/gui/setup_video.h, src/main.cpp: FPS limit can now be set in setup
	dialog. Default value for FPS is 50. (Code based on peoro's patch).

2006-05-02  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/localplayer.cpp: Fixed the delay last move bug.

2006-04-29  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/tiles/cave.png: Added tiles by yosuhara.

2006-04-28  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/Woodland_ground.png: Graphical update of the 
	woodland tileset. Paths improved, and tiles that were redunant replaced	
	by new dirt tiles.
	* data/maps/new_9.1.tmx.gz: modified because of changes in the tileset 
	layout (no new server sided walkmap required)
	* data/graphics/sprites/monster11.png: improved the shading of the mushroom
	monster
	* data/graphics/sprites/monster15.png: added dropshadow to the bat monster
	(note that the version 0.0.19 live update overrides the changed file)
	
2006-04-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* ChangeLog: Converted to UTF-8.
	* NEWS: Spelling correction.
	* docs/INSTALL/debian.txt, docs/INSTALL/win32.txt: Updated with respect
	to the move from CVS to Subversion.

2006-03-25  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/window.cpp: Added window resize patch by peoro.

2006-03-21  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev: Updated project.

2006-03-20  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/engine.cpp: Fixed a crash on map change.
